--- a/20250918_todolist/todoList02_obj02.html
+++ b/20250918_todolist/todoList02_obj02.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,24 +10,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <style>
-        ul,
-        li {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-    </style>
 </head>
-
 <body>
     <div class="container py-3">
-        <h3 class="text-center">오늘의 할일 List</h3>
+        <h3 class="text-center">오늘의 할일 list</h3>
         <div class="row">
             <div class="col-md-6 offset-md-3 d-flex">
                 <input type="text" placeholder="입력하세요" value="" class="inp form-control me-2" />
                 <button class="btn btn-primary inpBtn" style="width:100px">입력</button>
-                <button class="btn btn-danger inpMoBtn d-none" style="width:100px">수정</button>
+                <button class="btn btn-danger inMoBtn" style="width:100px">수정</button>
             </div>
         </div>
         <div class="row px-3">
@@ -45,7 +35,7 @@
                     <li class="d-flex justify-content-between py-3">
                         <div>자바</div>
                         <div class="d-flex gap-3">
-                            <i class="fa-solid fa-square"></i>
+                            <i class="fa-solid fa-square-check"></i>
                             <i class="fa-solid fa-pen"></i>
                             <i class="fa-solid fa-trash"></i>
                         </div>
@@ -56,20 +46,14 @@
     </div>
     <div class="row py-3">
         <div class="col-md-6 offset-md-3">
-            <div class="btn btn-danger d-block delAll">전체삭제</div>
+            <div class="btn btn-warning d-block delAll">전체삭제</div>
         </div>
-    </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.8/js/bootstrap.bundle.min.js"
         integrity="sha512-HvOjJrdwNpDbkGJIG2ZNqDlVqMo77qbs4Me4cah0HoDrfhrbA+8SBlZn1KrvAQw7cILLPFJvdwIgphzQmMm+Pw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
-        /*
-        1. 입력, 리스트, 체크, 수정, 삭제, 전체삭제 ->CRUD
-        2. 디자인 -> 선택자(dom) 찾기 -> 저장소(설계)/샘플데이터생성 -> for 문
-        */
-
         // let listView = [
         //     {
         //         todo: "자바",
@@ -88,84 +72,69 @@
         //         done: true,
         //     },
         // ];
-
         let listView = [];
 
-        // dom
         const viewDataElem = document.querySelector(".viewList");
-        const inpElem = document.querySelector(".inp"); // value
-        const btnElem = document.querySelector(".inpBtn"); // event
+        const inpElem = document.querySelector(".inp");
+        const inpBtnElem = document.querySelector(".inpBtn");
 
-        //create
-        btnElem.addEventListener("click", function () {
-            if (inpElem.value != '') {
-                let value = { todo: inpElem.value, done: false }; // 초기값
-                listView.push(value);
-                inpElem.value = ''; //set
-                viewData();
+        inpBtnElem.addEventListener("click",function(){
+            if(inpElem.value != ''){     //만약 inpElem의 value값이 비어있지 않다면,
+                let value = {todo:inpElem.value, done:false};
+                // 변수 value <= listView의 todo에 inpElem.value를 done에는 false를 사용
+                listView.push(value); // 변수 value는 그대로 listView에 넘어간다.
+                inpElem.value= '';  // 넘어간 후 value 값은 다시 비어진다.
+                viewData(); // viwData에 적용이 된다.
             } else {
-                alert('오늘의 할 일을 입력하세요');
+                alert('오늘의 할 일을 입력하세요'); // 만약 inpElem의 value값이 비어있다면, 알림창이 뜬다
             }
-        });
+        })
 
-        //function
-        // read
-        function viewData() {
+        function viewData(){
             let viewData = '';
-            listView.forEach(function (item, i) {
+            listVeiw.forEach(function(item, i){
                 viewData += `
                 <li class="d-flex justify-content-between py-3">
                         <div>${item.todo}</div>
                         <div class="d-flex gap-3">`;
 
-                // if(item.done == true){
-                //     viewData += `
-                //     <i class="fa-solid fa-square-check" onclick="noDone(${i})"></i>`;
-                // }else {
-                //     viewData += `<i class="fa-solid fa-square" onclick="yesDone(${i})"></i>`;
-                // }
+                        if(item.done == true){
+                            viewData +=`
+                            <i class="fa-solid fa-square-check" onclick="done(${i})"></i>`;
+                        }else{
+                            viewData += `
+                            <i class="fa-solid fa-square" onclick="done(${i})"></i>`;
+                        }
 
-                // item.done == true , item.done 같음
-                if (item.done) {
-                    viewData += `
-                 <i class="fa-solid fa-square-check" onclick="done(${i})"></i>`;
-                } else {
-                    viewData += `<i class="fa-solid fa-square" onclick="done(${i})"></i>`;
-                }
-
-                viewData += `                            
-                  <i class="fa-solid fa-pen"></i>
-                  <i class="fa-solid fa-trash" onclick="del(${i})"></i>
-                </div>
-                </li>`;
+                        viewData +=`
+                            <i class="fa-solid fa-pen"></i>
+                            <i class="fa-solid fa-trash" onclick="del(${i})"></i>
+                        </div>
+                    </li>`;
             });
             viewDataElem.innerHTML = viewData;
         }
         viewData();
 
-        //delete
-        function del(index) {
+        function del(index){
             alert(index);
         }
 
-        // done
-        function yesDone(index) {
+        function yesDone(index){
             console.log(index);
             listView[index].done = true;
             viewData();
         }
 
-        function noDone(index) {
+        function noDone(index){
             listView[index].done = false;
             viewData();
         }
 
-        function done(index) {
+        function done(index){
             listView[index].done = !listView[index].done;
             viewData();
         }
-
     </script>
 </body>
-
 </html>
