--- a/20250918_todolist/todoList02_obj.html
+++ b/20250918_todolist/todoList02_obj.html
@@ -92,9 +92,11 @@
         let listView = [];
 
         // dom
-        const viewDataElem = document.querySelector(".viewList");
+        const viewDataElem = document.querySelector(".viewList"); 
         const inpElem = document.querySelector(".inp"); // value
+        const inpNumElem = document.querySelector('.numInp');
         const btnElem = document.querySelector(".inpBtn"); // event
+        const btnMoElem = document.querySelector(".inpMoBtn"); // event
 
         //create
         btnElem.addEventListener("click", function () {
@@ -107,6 +109,17 @@
                 alert('오늘의 할 일을 입력하세요');
             }
         });
+
+        // modify
+            btnMoElem.addEventListener('click', function() {
+                // alert('진짜수정!');
+                listView[inpNumElem.value].todo = inpElem.value;
+
+                // 1 버튼 입력으로 변경
+                btnElem.style.display = 'block';
+                btnMoElem.style.display = 'none';
+                inpElem.value ='';
+            })
 
         //function
         // read
@@ -134,7 +147,7 @@
                 }
 
                 viewData += `                            
-                  <i class="fa-solid fa-pen"></i>
+                  <i class="fa-solid fa-pen" onclick="modi(${i}, '${listView[i].todo}')"></i>
                   <i class="fa-solid fa-trash" onclick="del(${i})"></i>
                 </div>
                 </li>`;
@@ -164,6 +177,23 @@
             listView[index].done = !listView[index].done;
             viewData();
         }
+
+        function modi(index, todo){
+            // alert('수정' + todo);
+            inpElem.value = todo;
+            btnElem.style.display = 'none';
+            btnMoElem.style.display = 'block';
+            btnElem.classList
+            viewData();
+        }
+
+         /*
+      개선방향
+      - done:true 이면 수정, 삭제금지 (if)
+      - done:true 이면 글자, 글자를 text-decoration:line-through
+      - done:false 원상복구
+      - 수정시 취소버튼 추가
+      */
 
     </script>
 </body>
