--- a/20250923_deep/array01.html
+++ b/20250923_deep/array01.html
@@ -6,18 +6,20 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="strview"></div>
     <script>
-        let arr = [{
-            name:"han",
-            age:20,
-        }];
-        let obj = {
-            name : "han",
-            age:20
-        }
-        // let arr = [1,2,3,4]
-        // let arr1 = [...arr];
-        // let arr1 = arr;
+        // let arr = [{
+        //     name:"han",
+        //     age:20,
+        // }];
+        // let obj = {
+        //     name : "han",
+        //     age:20
+        // }
+        let arr = [1,2,3,4];
+        let arr1 = arr;
+
+        let arr2 = [...arr];
 
         // console.log(arr1);
     </script>
