--- a/250930_kakao/kakao01.html
+++ b/250930_kakao/kakao01.html
@@ -12,21 +12,23 @@
     <script>
         async function kakaosearch(query){
             try {
-                const res = await axios.get(`https://dapi.kakao.com/v2/search/web?query=${query}`,{
+                // https://dapi.kakao.com/v2/search/web?query=${query}&size=50
+                const res = await axios.get(`https://dapi.kakao.com/v2/search/web`,{
                     headers:{
                         Authorization: "KakaoAK 112c0a4eb756703d8bc9dd8b99689439"
                     },
-                    // params:{
-                    //     query:query
-                    // }
+                    params:{
+                        query:query,
+                        size:50
+                    }
                 })
-                console.log(res.data);
+                console.log(res.data.documents);
                 // res : request
             } catch (error) {
                 
             }
         }
-        kakaosearch("손흥민")
+        kakaosearch("손흥민");
     </script>
 </body>
 </html>
