--- a/250930_kakao/kakao03_page.html
+++ b/250930_kakao/kakao03_page.html
@@ -34,7 +34,7 @@
                 </form>
                 <div id="results" class="list-group ">
                     <ul>
-                        <li class="text-center py-5">
+                        <li class="text-center py-5 bg-info mt-3">
                             <!-- <h4>
                                 <a href="#" class="nav-link wrap">Lorem ipsum dolor sit amet consectetur adipisicing
                                     elit. Repellat facere at tempore vero eligendi non?</a>
@@ -47,23 +47,47 @@
                         </li>
                     </ul>
                 </div>
+                <nav class="d-flex justify-content-center align-items-center">
+                    <ul class="pagination">
+                        <!-- <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item ">
+                            <a class="page-link" href="#" aria-current="page">2</a>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">4</a></li>
+                        <li class="page-item"><a class="page-link" href="#">5</a></li> -->
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
     <script>
+        let page = 1;
+        let listCnt = 3;
+        let pagerCnt = 5;
+        // let totalRecord = 0;
+        // let totalpage = 0;
+        // let query = '';
+
         // document.getElementById("searchform").addEventListener("submit",function(){})
-        document.getElementById("searchform").addEventListener("submit", async function (e) {
+        document
+        .getElementById("searchform")
+        .addEventListener("submit", function (e) {
             e.preventDefault();
 
             const query = document.querySelector(".search").value.trim();
             if (!query) {
                 alert("검색어를 입력하세요");
             }
-            console.log(query);
+            page = 1
+            searchData(query, page);
+        });
 
+        async function searchData(query, page) {
+            console.log(query, page);
             try {
                 // const res = await axios.get('url',{headers:{},params:{}})
-                const {data} = await axios.get(
+                const { data } = await axios.get(
                     'https://dapi.kakao.com/v2/search/web',
                     {
                         headers: {
@@ -71,57 +95,77 @@
                         },
                         params: {
                             query: query,
-                            size:3,
+                            page: page,
+                            size: listCnt,
                         },
                     },
                 );
 
-                // console.log(res);
-
+                console.log(data);
                 // const data = ★res.data;
-                
+
                 let viewData = '';
-                res.data.documents.forEach(function(item){
+                data.documents.forEach(function (item) {
                     viewData += `
                     <li>
                             <h4>
-                                <a href="${item.url}" target="_blank" class="nav-link wrap">
-                                    ${item.title}</a>
+                                <a href="${
+                                item.url
+                                }" target="_blank" class="nav-link wrap"
+                                >${item.title}</a>
                             </h4>
-                            <p>${item.contents}</p>
+                            <div class="d-flex gap-3"><img src="${
+                                item.thumbnail
+                            }" class="rounded"><p>${item.contents}</p></div>
                             <p class="d-flex justify-content-end small">
                                 <span>${item.datetime.split('T')[0]}</span>
                                 </p>
                         </li>
                     `;
-                    console.log(viewData);
+                    // console.log(viewData);
 
                     document.querySelector('#results>ul').innerHTML = viewData;
+                    let is_end = data.meta.is_end;
+                    console.log("마지막-" + is_end);
+                    pagination(query, page, is_end);
                 })
-            } catch (error) {
+            } catch (error) {}
+        };
 
+        function pagination(query, page, isEnd) {
+            const pageView = document.querySelector(".pagination");
+            pageView.innerHTML = '';
+
+            let startPage = Math.floor((page - 1)/pagerCnt) * pagerCnt + 1;
+            //(5-1)/5
+            let endPage =startPage + pagerCnt - 1;
+
+            console.log(startPage, endPage);
+
+            let pageNum = '';
+            // previous button
+            pageNum += `<li class="page-item ${
+            page == 1 ? 'disabled' : ''
+            }"><a href="#" class="page-link"
+            onclick="searchData('${query}',${page - 1}")>
+            Previous</a></li>`;
+            for(let i = startPage; i <= endPage; i++){
+                pageNum += `<li class="page-item ${
+                i == page ? 'active' : ''
+                }"><a class="page-link" href="#" onclick="searchData('${query}', ${i})">${i}</a></li>
+                `;
             }
-        });
+            // Next button
+            pageNum += `<li class="page-item ${isEnd == true ? 'disabled' : ''}">
+                <a class="page-link" href="#"
+                onclick="searchData('${query}',${page + 1})">
+                Next</a></li>`;
 
-        async function kakaosearch(query) {
-            try {
-                // https://dapi.kakao.com/v2/search/web?query=${query}&size=50
-                const res = await axios.get(`https://dapi.kakao.com/v2/search/web`, {
-                    headers: {
-                        Authorization: "KakaoAK 112c0a4eb756703d8bc9dd8b99689439"
-                    },
-                    params: {
-                        query: query,
-                        size: 50
-                    }
-                })
-                console.log(res.data.documents);
-                // res : request
-            } catch (error) {
-
-            }
+            pageView.innerHTML = pageNum;
         }
-        // kakaosearch("손흥민");
+
+        // pagination();
+        // searchData('손흥민', 2);
     </script>
 </body>
 
